--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-    "//1": "describes your app and its dependencies",
-    "//2": "https://docs.npmjs.com/files/package.json",
-    "//3": "updating this file will download and update your packages",
-    "name": "my-hyperdev-app",
-    "version": "0.0.1",
-    "description": "What am I about?",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "test": "mocha --ui tdd ./tests/1_unit-tests.js"
-    },
-    "dependencies": {
-        "body-parser": "^1.18.3",
-        "chai-http": "^4.2.1",
-        "cors": "^2.8.5",
-        "dotenv": "^6.2.0",
-        "express": "^4.16.4",
-        "helmet": "^3.15.0",
-        "mongodb": "^3.1.13",
-        "zombie": "^6.1.4"
-    },
-    "engines": {
-        "node": "4.4.3"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://hyperdev.com/#!/project/welcome-project"
-    },
-    "keywords": [
-        "node",
-        "hyperdev",
-        "express"
-    ],
-    "license": "MIT",
-    "devDependencies": {
-        "chai": "^4.2.0",
-        "mocha": "^5.2.0"
-    }
+	"//1": "describes your app and its dependencies",
+	"//2": "https://docs.npmjs.com/files/package.json",
+	"//3": "updating this file will download and update your packages",
+	"name": "my-hyperdev-app",
+	"version": "0.0.1",
+	"description": "What am I about?",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"test": "mocha --ui tdd ./test/1_unit-tests.js || exit 0"
+	},
+	"dependencies": {
+		"body-parser": "^1.18.3",
+		"chai-http": "^4.2.1",
+		"cors": "^2.8.5",
+		"dotenv": "^6.2.0",
+		"express": "^4.16.4",
+		"helmet": "^3.15.1",
+		"mongodb": "^3.1.13",
+		"zombie": "^6.1.4"
+	},
+	"engines": {
+		"node": "11.9.0"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://hyperdev.com/#!/project/welcome-project"
+	},
+	"keywords": [
+		"node",
+		"hyperdev",
+		"express"
+	],
+	"license": "MIT",
+	"devDependencies": {
+		"chai": "^4.2.0",
+		"mocha": "^6.0.2"
+	}
 }
