Finish controller logic and server routes
Controller logic and server routes have been finished and all tests are passing, pending deployment.

Signed-off-by: raul-f <raulf.dev@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"test": "mocha --ui tdd ./test/1_unit-tests.js || exit 0"
+		"test": "mocha --ui tdd || exit 0"
 	},
 	"dependencies": {
 		"body-parser": "^1.18.3",
